workloads/pxe/manifest/nbd.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nbd-server
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: nbd-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: nbd-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pxe
        app.kubernetes.io/component: nbd-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: machines.k8sMaster.hostname
      containers:
      - name: nbd-server
        image: distribution.docker-registry.svc.cluster.local/nbd-server:latest
        securityContext:
          capabilities:
            drop: [ALL]
            add:
            - NET_BIND_SERVICE
            - SETUID
            - SETGID
        volumeMounts:
        - name: home-cluster
          mountPath: /etc/nbd.conf
          subPath: workloads/pxe/config/nbd-server
        - name: images
          mountPath: /images
          subPath: nbd
        ports:
        - name: nbd
          port: 10809
      volumes:
      - name: home-cluster
        nfs:
          server: nfsShares.homeCluster.addr
          path: nfsShares.homeCluster.path
          readOnly: true
      - name: images
        nfs:
          server: nfsShares.images.addr
          path: nfsShares.images.path
          readOnly: true
