workloads/pxe/manifest/tftpd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tftpd
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: tftpd
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: tftpd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pxe
        app.kubernetes.io/component: tftpd
    spec:
      nodeSelector:
        kubernetes.io/hostname: machines.k8sMaster.hostname
      hostNetwork: true
      containers:
      - name: tftpd
        image: distribution.docker-registry.svc.cluster.local/tftpd:latest
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ALL]
            add:
            - NET_BIND_SERVICE
            - SETUID
            - SETGID
            - SYS_CHROOT
        ports:
        - name: tftp
          containerPort: 69
          hostPort: 69
        volumeMounts:
        - name: home-cluster
          mountPath: /var/lib/home-cluster
        - name: config
          mountPath: /tftp/config
      volumes:
      - name: home-cluster
        persistentVolumeClaim:
          claimName: home-cluster
      - name: config
        emptyDir: {}
