workloads/pxe/manifest/nginx.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: nginx
  ingress:
  - toPorts:
    - ports:
      - port: "80"
    fromEntities:
    - all
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: nginx
  annotations:
    io.cilium/lb-ipam-ips: "cluster.nginx.fixedIPv4,cluster.nginx.fixedIPv6"
spec:
  type: LoadBalancer
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: RequireDualStack
  selector:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pxe
        app.kubernetes.io/component: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.26.0
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: home-cluster
          mountPath: /etc/nginx/nginx.conf
          subPath: workloads/pxe/config/boot-vhost.conf
        - name: images
          mountPath: /images/pxe
          subPath: pxe
          readOnly: true
        - name: nginx-cache
          mountPath: /var/cache/nginx
      volumes:
      - name: home-cluster
        persistentVolumeClaim:
          claimName: home-cluster
      - name: images
        persistentVolumeClaim:
          claimName: images
      - name: nginx-cache
        emptyDir: {}
